--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@ fieldset.field_set{
 <li>In 2013, the UK Card Association supported TFL and the London public in 7,700,000 Contactless Bus journeys. This is still fairly low if one considers the sheer amount of journeys the local bus network in London carries. According to TFL the network carries over 1.8 billion passenger journeys per year. This makes every 233 bus journey a contactless bus journey. 
 But do people use it for their ride to work or to the park? Yes and no. They seem to used it right after the introduction of the contactless payment option for buses in London (July, 2014).</li>
 <li>In March 2014, the number of debit card payments for bus journeys reached almost 3 million. So people seemed to have spend over-dramatically via their debit cards. Then only five months later the amount if payments dropped to almost 50%. This could have been due to the introduction of the contactless payment and the abolishment of cash payments on buses. According to TFL, bus travellers who pay cash were paying more than others before this change. Cash fares on buses cost £2.40. Now with contactless payments, the 95p for the cash payments can be saved via the use of the Oyster card or the contactless card option. </li>
-<li>In august of 2014, we have seen a peak for the average value spent on each transition. With 55£ for credit card payments and 31£ for debit card payments in August 2014, the public spend significantly more money via their plastic cards.<br>
+<li>In august of 2014, we have seen a peak for the average value spent on each transition. With 55£ for credit card payments and 31£ for debit card payments in August 2014, the public spend significantly more money via their plastic cards. sdlnvldfnbvdfklnzbkln<br>
 </li>
 </ul>
 
 <div id="example"></div>
+
+<div>sdlnvldfnbvdfklnzbkln</div>
 
 <script>
 
