--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ But do people use it for their ride to work or to the park? Yes and no. They see
 
 <div id="example"></div>
 
+<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+
+
 <script>
 
 // Set the dimensions of the canvas / graph
