--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@ But do people use it for their ride to work or to the park? Yes and no. They see
 
 <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 
+<fieldset class="field_set">
+    <legend><h1>Search Sector</h1></legend>
+
+<form name="myform" onSubmit="return handleClickSearch()">
+        <input name="Submit"  type="submit" size="100" style="font-size: 30px;" color="#fff"    value="Find recommendations for ..." >
+        <input type="text" id="myVal" size="80" style="font-size: 14px;" placeholder="Search for example for Supermarkets">
+</form>
+
+</fieldset>
 
 <script>
 
