--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@ var valOpacity = function(d) {
     };
 
 </script>
-
+<!-- 
 <p>In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-        </section>
+        </section> -->
 
      
       </div>
