--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@ d3.csv("datatest2.csv", function(error, data) {
                 .duration(200)    
                 .style("opacity", 1);    
             div .html(
-               "Industry: " + d.bucket + ", Month: " + d.date + "<br>, Value: " + d.count)
-                .style("font-size", 30 + "px")        
+                d.bucket + d.date + d.count)
+                .style("font-size", 30 + "px")     
                 .style("left", 900 + "px")             
                 .style("top", 50 + "px");
             })
@@ -217,7 +217,7 @@ d3.csv("datatest2.csv", function(error, data) {
                 .duration(200)    
                 .style("opacity", 1);    
             div .html(
-                "Industry: " + d.bucket + ", Month: " + d.date + "<br>, Value: " + d.count)
+                d.bucket + d.date + d.count)
                 .style("font-size", 30 + "px")        
                 .style("left", 900 + "px")             
                 .style("top", 50 + "px");
@@ -239,8 +239,7 @@ d3.csv("datatest2.csv", function(error, data) {
                 .style("opacity", 1);    
                 div .html(
                 d.bucket + d.date + d.count)
-                "Industry: " + d.bucket + ", Month: " + d.date + "<br>, Value: " + d.count)
-                .style("font-size", 30 + "px")        
+                .style("font-size", 15 + "px")     
                 .style("left", 900 + "px")             
                 .style("top", 50 + "px");
             });
