--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ fieldset.field_set{
 
 </style>
 
-    <title>D3.js Project: UK Credit Card Transaction Data</title>
+    <title>Ben Heubl's D3.js Project: UK Credit Card Transaction Data</title>
   </head>
 
   <body>
